<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.tschulte.travelassistant.FontFitTextView
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="?attr/colorPrimary"
            android:fontFamily="@font/sans_bold"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ScrollView
            android:id="@+id/scrollViewSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/darkThemeSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="?attr/primaryTextColor"
                    android:fontFamily="@font/lato_reg"
                    android:text="Dark Mode"
                    android:textSize="30dp" />

                <Switch
                    android:id="@+id/ownCountrySetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="?attr/primaryTextColor"
                    android:fontFamily="@font/lato_reg"
                    android:text="@string/owncountrysetting"
                    android:textSize="30dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="?attr/primaryTextColor"
                    android:text="@string/sources"
                    android:background="?attr/buttonDetail"
                    android:id="@+id/sourcesButton"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>