<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/banner_traffic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/albania_square" />
                <com.tschulte.travelassistant.FontFitTextView
                    android:id="@+id/title_traffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/lato_reg"
                    android:gravity="center"
                    android:text="@string/traffic"
                    android:textStyle="bold" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <LinearLayout
                        android:id="@+id/lane_ll"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        style="?attr/borderlessButtonStyle">
                        <ImageView
                            android:id="@+id/road_side"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/traffic_light" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/road_side"
                            android:textAlignment="center"
                            android:textSize="28sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/min_year"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:layout_gravity="center|center_horizontal|center_vertical"
                            android:layout_margin="3dp"
                            android:adjustViewBounds="true"
                            android:fontFamily="@font/lato_reg"
                            android:gravity="center"
                            android:scaleType="fitXY"
                            android:text="@string/app_name"
                            android:textSize="90sp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/min_years_traffic"
                            android:textAlignment="center"
                            android:textSize="28sp"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/min_supervised_traffic"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_gravity="center|end"
                            android:layout_margin="3dp"
                            android:fontFamily="@font/lato_reg"
                            android:gravity="center|end"
                            android:includeFontPadding="true"
                            android:maxLines="1"
                            android:text="@string/app_name"
                            android:textAlignment="center"
                            android:textSize="90sp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/min_years_supervised_traffic"
                            android:textAlignment="center"
                            android:textSize="28sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:id="@+id/highway_ll"
                        style="?attr/borderlessButtonStyle">
                        <ImageView
                            android:id="@+id/highway_cost_traffic"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:adjustViewBounds="true"
                            android:fontFamily="@font/lato_reg"
                            android:scaleType="fitXY"
                            android:src="@drawable/wine_bottle"
                            android:textSize="80sp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/highway_free"
                            android:textAlignment="center"
                            android:textSize="28sp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speed_traffic"
                        android:textSize="28sp"
                        android:textAlignment="center"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp">
                            <TextView
                                android:layout_width="140dp"
                                android:layout_height="140dp"
                                android:text="444"
                                android:id="@+id/speedmeter_in_town"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:background="@drawable/speed"/>
                            <com.tschulte.travelassistant.FontFitTextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|start"
                                android:layout_marginEnd="15dp"
                                android:text="@string/in_town_speed"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp">
                            <TextView
                                android:layout_width="140dp"
                                android:layout_height="140dp"
                                android:text="444"
                                android:textSize="50sp"
                                android:id="@+id/speedmeter_country_roads"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:layout_marginEnd="15dp"
                                android:background="@drawable/speed"/>
                            <com.tschulte.travelassistant.FontFitTextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|start"
                                android:layout_marginEnd="15dp"
                                android:textAlignment="center"
                                android:text="@string/country_roads_speed"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp">
                            <TextView
                                android:layout_width="140dp"
                                android:layout_height="140dp"
                                android:text="444"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:id="@+id/speedmeter_highway"
                                android:background="@drawable/speed"
                                android:layout_marginEnd="15dp"/>
                            <com.tschulte.travelassistant.FontFitTextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|start"
                                android:layout_marginEnd="15dp"
                                android:text="@string/highway_speed"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:weightSum="3">
                        <TextView
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/app_name"
                            android:textSize="50sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:layout_marginEnd="15dp"
                            android:gravity="center"
                            android:id="@+id/speed_tolerance"/>
                        <com.tschulte.travelassistant.FontFitTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginEnd="15dp"
                            android:text="@string/speed_tolerance"
                            android:gravity="center|start" />
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:id="@+id/alcohol_tolerance_ll"
                    style="?attr/borderlessButtonStyle"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_marginEnd="15dp"
                        android:gravity="center"
                        android:id="@+id/alcohol_tolerance"/>
                    <com.tschulte.travelassistant.FontFitTextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_marginEnd="15dp"
                        android:text="@string/alcohol_tolerance"
                        android:gravity="center|start"/>
                </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/legal_binding"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>