<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/albania_square" />
                <com.tschulte.travelassistant.FontFitTextView
                    android:id="@+id/title_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/lato_reg"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textStyle="bold" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/button_detail">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/detail_lin"
                style="?attr/borderlessButtonStyle">
                <com.tschulte.travelassistant.SquareImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/traffic_light" />
                <com.tschulte.travelassistant.FontFitTextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/traffic" />
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/button_detail">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/detail_alc"
                    style="?attr/borderlessButtonStyle">
                    <com.tschulte.travelassistant.SquareImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/wine_bottle"/>
                    <com.tschulte.travelassistant.FontFitTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="@string/alcohol"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/button_detail">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/detail_trans"
                    style="?attr/borderlessButtonStyle">
                    <com.tschulte.travelassistant.SquareImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/translator"/>
                    <com.tschulte.travelassistant.FontFitTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="@string/translation"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>